Button  alignment issue  is fixed

--- a/GST_Mart/Content/css/style.css
+++ b/GST_Mart/Content/css/style.css
@@ -1353,3 +1353,8 @@ color: white;
 
     width:47px;
 }*/
+
+.w-bg .button {
+    float: none;
+    width: 388px;
+}
